# ------------------------------------------------------------------------------
#  ChangeLog
#  This file is part of Unifix BWidget Toolkit
#  $Id: ChangeLog,v 1.215 2010/05/12 08:22:19 oehhar Exp $
# ------------------------------------------------------------------------------

2010-05-05 Harald Oehlmann < oehhar@users.sourceforge.net>

	* listbox.tcl(ListBox::_configureSelectmode) Drag modifies
	multiple selection [Bug 2995969] reported by Robert Karen.
	Bound events on ButtonRelease-1 instead Button-1 for multiple
	selections to avoid bug.
	* listbox.tcl(ListBox::_drag_and_drop) The default drag and drop
	routine only handled single drag and drop.
	It was extended to handle also drag and drop of multiple entries.

2009-09-11 Johann Oberdorfer  <oberdorfer@users.sourceforge.net>

        * button.tcl, "BWSlim.Toolbutton" style related change to ensure that
	  a button created with "-style BWSlim.Toolbutton" keeps it's layout	  

2009-09-10 Johann Oberdorfer  <oberdorfer@users.sourceforge.net>

        * combobox hottrack motion bug fixed:
          "after idle" should fix the problem with very long listbox text items
          which caused under certain circumstances a complete crash (CDE freeze)
          this happened under AIX5.3 and CDE, running under tcl/Tk 8.4.7,

2009-09-05 Johann Oberdorfer  <oberdorfer@users.sourceforge.net>

	*** BWidget revitalization to make usage of ttk ***
        * pkgIndex.tcl,   updated to 1.9.1, themeutils.tcl added, requ.
	                  initialization sequence
	* themeutils.tcl, theme support file added
	* widget.tcl,     various changes related to ttk added
	* init,tcl,       BWidget::set_themedefaults "initialize" added
	* --
	  arrow.tcl, button.tcl, buttonbox.tcl, color.tcl, dialog.tcl,
	  entry.tcl, font.tcl, label.tcl, labelframe.tcl, 
	  listbox.tcl, mainframe.tcl, messagedlg.tcl, pagesmgr.tcl,
	  panedw.tcl, panelframe.tcl, passwddlg.tcl, progressbar.tcl,