@@ -1,8 +1,14 @@
 # ------------------------------------------------------------------------------
 #  ChangeLog
 #  This file is part of Unifix BWidget Toolkit
-#  $Id: ChangeLog,v 1.215 2010/05/12 08:22:19 oehhar Exp $
+#  $Id: ChangeLog,v 1.216 2010/05/12 08:24:53 oehhar Exp $
 # ------------------------------------------------------------------------------
+
+2010-05-11 Harald Oehlmann < oehhar@users.sourceforge.net>
+
+	* listbox.tcl(ListBox::see) Method see shifts image out of
+	view. Showed up, by a selection click on a long item with icon
+	[Bug 2999764] reported by Robert Karen.
 
 2010-05-05 Harald Oehlmann < oehhar@users.sourceforge.net>
 
